# deb-int

./: .gitignore  Taskfile.install.yml  bootstrap.sh
personalized-shopping-api/: .env copy.example  .env.example  .gitignore  .gitignore copy  COMPLETION_STATUS.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PRODUCT_STRATEGY.md  PROJECT_SUMMARY.md  PYDANTIC_AI_MIGRATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README copy.md  REFACTORING_SUMMARY.md  STATUS.md  TEST_RESULTS.md  VERIFY_REFACTORING.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  quickstart.sh  requirements copy.txt  requirements.txt  test_api.sh
personalized-shopping-api/app/: __init__.py  main.py
personalized-shopping-api/app/agents/: __init__.py  customer_profiling.py  intent_classifier_agent.py  intent_classifier_agent_v2.py  recommendation.py  response_generation.py  review_filtering.py  similar_customers.py
personalized-shopping-api/docs/: AGENT_QUICKSTART.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE.md  LANGFUSE_COMPLETE.md  LANGFUSE_INTEGRATION.md  LANGFUSE_SETUP.md  OLLAMA_CPU_OPTIMIZATION.md  ORCHESTRATION_ARCHITECTURE.md  PROMPT_MANAGEMENT.md  PYDANTIC_AI_INTEGRATION.md  PYDANTIC_AI_MIGRATION_GUIDE.md  PYDANTIC_AI_SUMMARY.md  QUICKSTART.md  QUICK_START_OLLAMA.md  README.md  REFACTORING_VISUAL.md  debug.md
personalized-shopping-api/scripts/: build_vector_index.py  init_ollama.sh  pull_ollama_models.sh  setup-langfuse.sh  setup.sh
(+81 files in other folders)
